--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -3,11 +3,11 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> 
 
-/* SHOW ALL ELEMENTS HIGHLIGHTED IN RED   */
+/* SHOW ALL ELEMENTS HIGHLIGHTED IN RED   
 * {
    border: 1px solid red !important;
 }
-
+*/
 
 // Colors
 $dark-gray: #1A1A1A;
