--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,25 +1,17 @@
 // Home Page Container
-.home-container {
+.dict-container {
+    min-height: 100vh;
     position: relative;
-    min-height: 700px;
-    height: 100vh;
-    width: 100vw;
-    background-color: $dark-gray;
-
-    
+    background-color: $dark-gray;   
 }
 
 // Home Page Content
-.home-content {
+.dict-content {
+    padding: 10px;
     min-width: 300px;
-    max-width: 700px;
-    min-height: 500px;
-    height: 50%; /* Set your own height: percents, ems, whatever! */
-    width: 50%; /* Set your own width: percents, ems, whatever! */
+    max-width: 660px;
  // overflow: auto; /* Recommended in case content is larger than the container */
     margin: auto; /* Center the item vertically & horizontally */
-    position: absolute; /* Break it out of the regular flow */
-    top: 0; left: 0; bottom: 0; right: 0; /* Set the bounds in which to center it, relative to its parent/container */
 
 // Header Settings
     h1 {
@@ -54,13 +46,13 @@
 // paragraph description
     p.description {
         position: relative;
+        width: 100%;
+        padding-left: 20px;
     }
 
 // the number description
     span.description {
-        position: absolute;
         float: left;
-        left: -25px;
     }
 
 // Skills, Tools, etc.
@@ -74,6 +66,7 @@
 
     .skills{
         padding-top: 10px;
+        overflow: auto;
 
         p {
           float: left;
@@ -111,6 +104,22 @@
 
 }
 
+
+// Home Container 
+
+.home-container {
+    @extend .dict-container;
+}
+
+.home-content {
+    @extend .dict-content;
+    margin: auto;
+    position: absolute;
+    top: 50%; 
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
 // Media Queries
 @media (max-width: 500px) {
     .home-container {
@@ -118,10 +127,14 @@
     }
 }
 
-
-@media (max-width: 768px) {
+@media only screen and (max-height: 500px), screen and (max-width: 768px) {
     // Home Page Content
-    .home-content {
+    .dict-content {
+        margin: auto;
+        position: relative;
+        top: 0; 
+        left: 0;
+        transform: translate(0%,0%);    
 
     // Header Settings
         h1 {
