--- a/views/blog.html
+++ b/views/blog.html
@@ -1,12 +1,10 @@
 <div class="blog-container">
 	<div class="nav">
-		<div class="pull-right">
-			<ul>
-				<li><a href="#works">Works</a></li>
-				<li><a href="#blog">Blog</a></li>
-				<li><a href="#/">About</a></li>
-			</ul>
-		</div>
+		<ul class="pull-right">
+			<li><a href="#works">Works</a></li>
+			<li><a href="#blog">Blog</a></li>
+			<li><a href="#/">About</a></li>
+		</ul>
 	</div>
 	<div class="blog-content">
 		<h1>Blog Title</h1>
