--- a/views/works.html
+++ b/views/works.html
@@ -1,68 +1,55 @@
 <div class="works-container">
 	<div class="nav">
-		<div class="pull-right">
-			<ul>
-				<li><a href="#works">Works</a></li>
-				<li><a href="#blog">Blog</a></li>
-				<li><a href="#/">About</a></li>
-			</ul>
-		</div>
+		<ul class="pull-right">
+			<li><a href="#works">Works</a></li>
+			<li><a href="#blog">Blog</a></li>
+			<li><a href="#/">About</a></li>
+		</ul>
 	</div>
-
 	<div class="works-header">
 		<p class="header">Works</p>
 		<p class="pronounce">/ (wərk-s) / </p>
 	</div>
-
-	<div class="works-content">
+	<div class="works-row">
 		<div class="tile">
 			<p class="tile-caption"> Now We're Cookin' </p>
 			<a href="#/nwc">
 				<img class="img-responsive" src="images/nwc/nwc-logo.png">
 			</a>
 		</div>
-
 		<div class="tile">
 			<p class="tile-caption"> Tile Caption </p>
 			<img class="img-responsive" src="http://placehold.it/500x500">
 		</div>
 	</div>
-
-	<div class="works-content">
+	<div class="works-row">
 		<div class="tile">
 			<p class="tile-caption"> Tile Caption </p>
 			<img class="img-responsive" src="http://placehold.it/500x500">
 		</div>
-
-		<div class="tile">
-			<p class="tile-caption"> Tile Caption </p>
-			<img class="img-responsive" src="http://placehold.it/500x500">
-		</div>
-	</div>
-
-	<div class="works-content">
-		<div class="tile">
-			<p class="tile-caption"> Tile Caption </p>
-			<img class="img-responsive" src="http://placehold.it/500x500">
-		</div>
-
 		<div class="tile">
 			<p class="tile-caption"> Tile Caption </p>
 			<img class="img-responsive" src="http://placehold.it/500x500">
 		</div>
 	</div>
-
-	<div class="works-content">
+	<div class="works-row">
 		<div class="tile">
 			<p class="tile-caption"> Tile Caption </p>
 			<img class="img-responsive" src="http://placehold.it/500x500">
 		</div>
-
 		<div class="tile">
 			<p class="tile-caption"> Tile Caption </p>
 			<img class="img-responsive" src="http://placehold.it/500x500">
 		</div>
 	</div>
-
+	<div class="works-row">
+		<div class="tile">
+			<p class="tile-caption"> Tile Caption </p>
+			<img class="img-responsive" src="http://placehold.it/500x500">
+		</div>
+		<div class="tile">
+			<p class="tile-caption"> Tile Caption </p>
+			<img class="img-responsive" src="http://placehold.it/500x500">
+		</div>
+	</div>
 </div>
-
