--- a/views/works.html
+++ b/views/works.html
@@ -1,11 +1,16 @@
 <div class="works-container">
+	<div class="mobile-nav"></div>
 	<div class="nav">
-		<ul class="pull-right">
+		<div class="btn mobile-nav-btn pull-right">	
+		</div>
+
+		<ul class="desktop-nav pull-right">
 			<li><a href="#works">Works</a></li>
 			<li><a href="#blog">Blog</a></li>
 			<li><a href="#/">About</a></li>
 		</ul>
 	</div>
+
 	<div class="works-header">
 		<p class="header">Works</p>
 		<p class="pronounce">/ (wərk-s) / </p>
