Updates for deployment
removed Work in progress items.

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -19,6 +19,9 @@ $orange: #DD9833;
 $dark-pink: #C66F61;
 $nwc-yellow: #F7E4B6;
 
+//Fonts
+$nav-font-size: 1.75rem;
+
 @mixin hover-focus-active() {
   &:hover,
   &:focus,
@@ -32,6 +35,14 @@ $nwc-yellow: #F7E4B6;
 @import "works";
 @import "case-study";
 @import "blog";
+@import "menu-icon";
+
+//Page Links
+/* unvisited link */
+a,a:link,a:visited
+{
+ color:$white;
+}
 
 // Page Settings
 .page {
@@ -47,17 +58,20 @@ $nwc-yellow: #F7E4B6;
 // Default Nav Bar
 .nav {
     width: 100vw;
-    $fontsize: 1.75rem;
     padding: 25px 25px 0px;
     
     ul > li {
         font-family: 'Open Sans', sans-serif;
         font-weight: 300;
         display: inline;
-        font-size: $fontsize;
+        font-size: $nav-font-size;
         margin-left: 3rem;
         color: $white;
     }
+}
+
+.nav-list {
+  float:right;
 }
 
 .mobile-nav-btn {
@@ -72,6 +86,8 @@ $nwc-yellow: #F7E4B6;
 }
 
 @media only screen and (max-width: 768px) {
+  $nav-font-size: 1rem;
+
   .nav {
     padding: 1rem 1rem 0;
   }
@@ -91,6 +107,27 @@ $nwc-yellow: #F7E4B6;
     height: 50vh;
     background-color: $green;
   }
+
+  .nav-list {
+    float: none;
+    padding-right: 40px;
+    text-align: center;
+  }
+
+  .nav {
+    width: 100vw;
+    padding: 25px 25px 0px;
+    
+    ul > li {
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 300;
+        display: inline;
+        font-size: 1.4rem;
+        margin: 1.5rem;
+        color: $white;
+    }
+  }
+
 }
 
 
