--- a/views/home.html
+++ b/views/home.html
@@ -1,11 +1,12 @@
 <div class="home-container">
 	<div class="nav">
-		<ul class="pull-right">
+		<ul class="nav-list">
 			<li><a href="#works">Works</a></li>
-			<li><a href="#blog">Blog</a></li>
-			<li><a href="#/">About</a></li>
+			<li><a href="#contact">Contact</a></li>
+			<li><a href="#">About</a></li>
 		</ul>
 	</div>
+
 	<div class="home-content">
 		<h1>Antonio Lee</h1>
 		<p class="pronounce">/ (an, ən) - tō - nē - ō /  [ lē ]</p>
@@ -18,6 +19,7 @@
 		<p class="description">
 			Besides designing and developing things, I like to do other things too! I love being active, anything music related, artsy stuff, and being surrounded by friends!
 		</p>
+
 		<p class="skills-header"> Skills </p>
 		<div class="skills">
 			<p class="green">&nbsp&nbsp ILLUSTRATOR &nbsp&nbsp</p>
