--- a/views/nwc.html
+++ b/views/nwc.html
@@ -1,15 +1,14 @@
 <div class="container-fluid nwc-container">
 	<div class="nav">
-		<ul class="pull-right">
+		<ul class="nav-list">
 			<li><a href="#works">Works</a></li>
 			<li><a href="#blog">Blog</a></li>
 			<li><a href="#/">About</a></li>
 		</ul>
 	</div>
 
-	<div class="row">
-		<div class="col-lg-2"></div>
-		<div class="col-lg-4">
+	<div class="study-row">
+		<div class="study-tile">
 			<div class="study-content">
 				<h1>Now We're Cookin'</h1>
 				<p class="pronounce">/ nou - (wir,wər) - ko͝okiNG / </p>
@@ -34,13 +33,10 @@
 					<p class="orange">&nbsp&nbsp CORONA SDK &nbsp&nbsp</p>
 				</div>
 			</div>
-			<div class="col-lg-2"></div>
 		</div>
-
-		<div class="col-lg-4">
-			<img class="img-responsive study-logo" src="images/nwc/nwc-logo.png">
+		<div class="study-image-wrapper study-tile">
+			<img class="img-responsive study-image" src="images/nwc/nwc-logo.png">
 		</div>
-
 	</div>
 
 	<div class="row">
