--- a/views/works.html
+++ b/views/works.html
@@ -1,14 +1,12 @@
 <div class="works-container">
-	<div class="mobile-nav"></div>
 	<div class="nav">
-		<div class="btn mobile-nav-btn pull-right">	
-		</div>
 
-		<ul class="desktop-nav pull-right">
+		<ul class="nav-list">
 			<li><a href="#works">Works</a></li>
-			<li><a href="#blog">Blog</a></li>
+			<li><a href="#contact">Contact</a></li>
 			<li><a href="#/">About</a></li>
 		</ul>
+
 	</div>
 
 	<div class="works-header">
@@ -18,43 +16,34 @@
 	<div class="works-row">
 		<div class="tile">
 			<p class="tile-caption"> Now We're Cookin' </p>
-			<a href="#/nwc">
+			<!-- a href="#/nwc" -->
 				<img class="img-responsive" src="images/nwc/nwc-logo.png">
-			</a>
+			<!-- /a -->
 		</div>
 		<div class="tile">
-			<p class="tile-caption"> Tile Caption </p>
-			<img class="img-responsive" src="http://placehold.it/500x500">
+			<p class="tile-caption"> Solar Crysis </p>
+			<img class="img-responsive" src="images/solarcrysis-logo.png">
 		</div>
 	</div>
 	<div class="works-row">
 		<div class="tile">
-			<p class="tile-caption"> Tile Caption </p>
-			<img class="img-responsive" src="http://placehold.it/500x500">
+			<p class="tile-caption"> Work in Progress </p>
+			<img class="img-responsive" src="images/lock-blue.png">
 		</div>
 		<div class="tile">
-			<p class="tile-caption"> Tile Caption </p>
-			<img class="img-responsive" src="http://placehold.it/500x500">
+			<p class="tile-caption"> Work in Progress </p>
+			<img class="img-responsive" src="images/lock-orange.png">
 		</div>
 	</div>
 	<div class="works-row">
 		<div class="tile">
-			<p class="tile-caption"> Tile Caption </p>
-			<img class="img-responsive" src="http://placehold.it/500x500">
+			<p class="tile-caption"> Work in Progress </p>
+			<img class="img-responsive" src="images/lock-red.png">
 		</div>
 		<div class="tile">
-			<p class="tile-caption"> Tile Caption </p>
-			<img class="img-responsive" src="http://placehold.it/500x500">
+			<p class="tile-caption"> Work in Progress </p>
+			<img class="img-responsive" src="images/lock-green.png">
 		</div>
 	</div>
-	<div class="works-row">
-		<div class="tile">
-			<p class="tile-caption"> Tile Caption </p>
-			<img class="img-responsive" src="http://placehold.it/500x500">
-		</div>
-		<div class="tile">
-			<p class="tile-caption"> Tile Caption </p>
-			<img class="img-responsive" src="http://placehold.it/500x500">
-		</div>
-	</div>
+
 </div>
