--- a/sass/_case-study.scss
+++ b/sass/_case-study.scss
@@ -7,8 +7,32 @@
     }
 }
 
+
+.study-row {
+    text-align: center;
+}
+
+.study-tile {
+    display: inline-block;
+}
+
+.study-image-wrapper {
+    max-height: 1000px;
+    max-width: 1000px;
+}
+
+.study-image {
+    width: 400px;
+    height: 400px;
+}
+
+
 // Home Page Content
 .study-content {   
+
+    @extend .dict-content;
+    position: relative;
+    text-align: left;
 
 // Header Settings
     h1 {
@@ -44,7 +68,6 @@
     p.description {
         position: relative;
         width: 100%;
-        padding-left: 20px;
     }
 
 // the number description
@@ -116,18 +139,8 @@
 // NWC Container 
 .nwc-content {
     @extend .study-content;
-
-    .col-lg-4 {
-        float: none;
-        position: relative;
-    }
-
-    .study-logo {
-        display: inline-block;
-        vertical-align: middle;
-        float: none;
-    }
 }
+
 
 
 
@@ -146,10 +159,6 @@
         p {
             font-size: 1.5rem;
         }    
-    }
-
-    .study-image {
-        margin: auto;
     }
 }
 
