--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,4 +1,9 @@
 // Home Page Container
+
+$padding: 20px;
+
+// Dictionary Theme
+
 .dict-container {
     min-height: 100vh;
     position: relative;
@@ -7,7 +12,7 @@
 
 // Home Page Content
 .dict-content {
-    padding: 10px;
+    padding: 0 35px;
     min-width: 300px;
     max-width: 660px;
  // overflow: auto; /* Recommended in case content is larger than the container */
@@ -47,12 +52,13 @@
     p.description {
         position: relative;
         width: 100%;
-        padding-left: 20px;
     }
 
 // the number description
     span.description {
         float: left;
+        position: absolute;
+        left: 10px;
     }
 
 // Skills, Tools, etc.
@@ -100,6 +106,16 @@
     .orange {
         @extend .border;
         border-color: $orange;
+    }
+
+    .pink {
+        @extend .border;
+        border-color: $dark-pink;
+    }
+
+    .yellow {
+        @extend .border;
+        border-color: $nwc-yellow;
     }
 
 }
