--- a/views/contact.html
+++ b/views/contact.html
@@ -1,11 +1,39 @@
-<!-- page-contact.html -->
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-sm-12">
-			<h1>Tons of Animations</h1>
-			<h2>Contact</h2>
-			<a href="#" class="btn btn-primary btn-lg">Home</a>
-			<a href="#about" class="btn btn-success btn-lg">About</a>
+<div class="home-container">
+	<div class="nav">
+		<ul class="nav-list">
+			<li><a href="#works">Works</a></li>
+			<li><a href="#contact">Contact</a></li>
+			<li><a href="#">About</a></li>
+		</ul>
+	</div>
+
+	<div class="home-content">
+		<h1>Contact</h1>
+		<p class="pronounce">/ (känˌ , kən) - [takt] / </p>
+		<p class="verb">Noun</p>
+		<span class="description">1.</span>
+		<p class="description">Contact</p>
+		<p class="description">
+			Email: antoniolee@outlook.com
+		</p>
+		<span class="description">2.</span>
+		<p class="description">Resume</p>
+		<p class="description">
+			<a href="misc/antoniolee-resume.pdf">
+			Last edited: July, 11th, 2015
+			</a>
+		</p>
+		<p class="skills-header"> Topics of Interest </p>
+		<div class="skills">
+			<p class="green">&nbsp&nbsp DESIGN &nbsp&nbsp</p>
+			<p class="green">&nbsp&nbsp DEVELOPMENT &nbsp&nbsp</p>
+			<p class="yellow">&nbsp&nbsp SKATEBOARDING &nbsp&nbsp</p>
+			<p class="blue">&nbsp&nbsp GUITAR &nbsp&nbsp</p>
+			<p class="blue">&nbsp&nbsp MUSIC &nbsp&nbsp</p>
+			<p class="orange">&nbsp&nbsp ADVENTURING &nbsp&nbsp</p>
+			<p class="orange">&nbsp&nbsp COOKING &nbsp&nbsp</p>
+			<p class="pink">&nbsp&nbsp DREAMING &nbsp&nbsp</p>
 		</div>
+		
 	</div>
 </div>
